Update version to 1.10.0 and enhance command argument handling
- Bumped project version in gradle.properties from 1.9.5 to 1.10.0.
- Introduced new optional path segments for nested subcommands in the SubCommand annotation.
- Enhanced CommandArgument to support named options, including short and long names, and flag functionality.
- Improved CommandManager to handle subcommand execution and argument parsing more effectively.
- Updated HelpCommandSupport to reflect changes in subcommand structure and improve help command output.
- Refactored various command-related classes for better maintainability and clarity.